--- a/ios/accuwa/Info.plist
+++ b/ios/accuwa/Info.plist
@@ -65,7 +65,7 @@
 		<string>roboto-regular.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<string>SplashScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
