--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
     "react-native-appearance": "~0.3.3",
+    "react-native-clock-sync": "^1.1.0-a",
     "react-native-device-info": "^5.5.1",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
@@ -67,6 +68,7 @@
     "react-native-screens": "~2.15.2",
     "react-native-svg": "12.1.0",
     "react-native-tab-view": "^2.13.0",
+    "react-native-udp": "2.1.0",
     "react-native-unimodules": "^0.13.3",
     "react-native-web": "^0.15.0"
   },
