--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@eva-design/material": "^2.1.0",
     "@react-native-async-storage/async-storage": "^1.13.4",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/slider": "^3.0.3",
     "@react-navigation/bottom-tabs": "^5.11.7",
     "@react-navigation/drawer": "^5.12.3",
     "@react-navigation/material-top-tabs": "^5.3.13",
@@ -62,6 +63,7 @@
     "react-native-device-info": "^5.5.1",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
+    "react-native-photo-view-ex": "^1.1.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safari-view": "naoufal/react-native-safari-view#master",
     "react-native-safe-area-context": "3.1.9",
